@@ -1,10 +1,10 @@
 SUBDIRS = dolfin \
-          poisson \
           convdiff \
-	  navierstokes \
           elasticity \
-	  elasticity-updated
-# navierstokes
+	  elasticity-updated \
+	  navierstokes \
+          poisson \
+          stokes
 
 INCLUDES = @KERNEL_CFLAGS@
 include_HEADERS = dolfin/dolfin_modules.h \
