@@ -2,16 +2,17 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-02-15
-// Last changed: 2005
+// Last changed: 2005-09-20
 
 #ifndef __DOLFIN_MODULES_H
 #define __DOLFIN_MODULES_H
 
 #include <dolfin/Solver.h>
-#include <dolfin/dolfin_poisson.h>
 #include <dolfin/dolfin_convdiff.h>
 #include <dolfin/dolfin_elasticity.h>
 #include <dolfin/dolfin_elasticityupdated.h>
+#include <dolfin/dolfin_poisson.h>
 #include <dolfin/dolfin_navierstokes.h>
+#include <dolfin/dolfin_stokes.h>
 
 #endif
