@@ -1,0 +1,7 @@
+SUBDIRS                    = dolfin
+include_HEADERS            = dolfin/dolfin_stokes.h \
+                             dolfin/Stokes.h \
+                             dolfin/StokesSolver.h
+INCLUDES                   = @MODULE_CFLAGS@
+lib_LIBRARIES              = libdolfin-stokes.a
+libdolfin_stokes_a_SOURCES = StokesSolver.cpp
