@@ -1,0 +1,12 @@
+// Copyright (C) 2005 Johan Hoffman and Anders Logg.
+// Licensed under the GNU GPL Version 2.
+//
+// First added:  2005-04-04
+// Last changed: 2005
+
+#ifndef __DOLFIN_POISSON_H
+#define __DOLFIN_POISSON_H
+
+#include <dolfin/PoissonSolver.h>
+
+#endif
