@@ -1,7 +1,10 @@
+ - Add Stokes module (experimental)
+ - Support for arbitrary mixed elements through FFC (experimental)
  - VTK output interface now handles time-dependent functions automatically
  - Fix cout for empty matrix
  - Change dolfin_start() --> dolfin_end()
- - Add chapters to manual: reference about, elements, installation, contributing, license
+ - Add chapters to manual: about, log system, parameters, reference elements,
+   installation, contributing, license
  - Use new template fenicsmanual.cls for manual
  - Add compiler flag -U__STRICT_ANSI__ when compiling under Cygwin 
  - Add class EigenvalueSolver
